<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_cloud_transformer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dbxotjs1234@khu.ac.kr">dbxotjs</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>          <!-- PointCloud2 생성용 -->
  <exec_depend>std_msgs</exec_depend>             <!-- Header 메시지용 -->
  <exec_depend>numpy</exec_depend>                <!-- 코드에서 import numpy 사용 시 -->
  <exec_depend>sensor_msgs_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
