<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_select_param</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dbxotjs@todo.todo">dbxotjs</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>pyyaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
